--- a/index.html
+++ b/index.html
@@ -8,9 +8,55 @@
         <link rel="stylesheet" type="text/css" href="">
     </head>
     <body>
+        <!-- header -->
         <div class="header">
-            
-        </div>
+            <div class="logo">
+                <a class="logo-link" href="#">Build-Up</a>
+                <p>your advertising agency</p>
+            </div>
+            <!-- navigation -->
+            <ul class="nav">
+                <li class="nav-item"><a class="nav-item-link nav-item-link-current">Home</a>
+                    <ul class="nav-level-1">
+                        <li class="nav-level-1-item"><a class="nav-level-1-item-link">Lorem Ipsum</a></li>
+                        <li class="nav-level-1-item"><a class="nav-level-1-item-link">Lorem Ipsum</a>
+                            <ul class="nav-level-2">
+                                <li class="nav-level-2-item"><a class="nav-level-2-item-link">Lorem Ipsum</a></li>
+                                <li class="nav-level-2-item"><a class="nav-level-2-item-link">Lorem Ipsum</a></li>
+                                <li class="nav-level-2-item"><a class="nav-level-2-item-link">Lorem Ipsum</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-level-1-item"><a class="nav-level-1-item-link">Lorem Ipsum</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a class="nav-item-link">About</a></li>
+                <li class="nav-item"><a class="nav-item-link">Projects</a></li>
+                <li class="nav-item"><a class="nav-item-link">Services</a></li>
+                <li class="nav-item"><a class="nav-item-link">Contacts</a></li>
+            </ul><!-- navigation -->
+        </div><!-- header -->
+        <!-- content -->
+        <div class="content">
+            <!-- slider -->
+            <div class="slider">
+                <ul class="slider-controls">
+                    <li class="slider-controls-item slider-controls-item-current"></li>
+                    <li class="slider-controls-item"></li>
+                </ul>
+                <ul class="slider-img-wrapper">
+                    <li class="slider-img-item"><img class="slider-img" src="#"></li>
+                    <li class="slider-img-item"><img class="slider-img" src="#"></li>
+                </ul>
+                <div class="slider-contacts-wrapper">
+                    <p class="slider-contacts-title"></p>
+                    <ul class="slider-contacts">
+                        <li class="slider-contacts-item"><a class="slider-contacts-item-link" href="#"></a></li>
+                        <li class="slider-contacts-item"><a class="slider-contacts-item-link" href="#"></a></li>
+                        <li class="slider-contacts-item"><a class="slider-contacts-item-link" href="#"></a></li>
+                    </ul>
+                </div>
+            </div><!-- slider -->
+        </div><!-- content -->
     </body>
 </html>
         
