--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="#">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link href='http://fonts.googleapis.com/css?family=Marvel:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <!-- header -->
@@ -46,27 +46,27 @@
         <!-- content -->
         <section class="content" role="main">
             <!-- slider -->
-            <div class="slider">
-                <ul class="slider-controls">
-                    <li class="slider-controls-item slider-controls-item-current"></li>
-                    <li class="slider-controls-item"></li>
-                </ul>
+            <section class="slider">
                 <ul class="slider-img-wrapper">
-                    <li class="slider-img-item"><img class="slider-img" src="#"></li>
-                    <li class="slider-img-item"><img class="slider-img" src="#"></li>
+                    <li class="slider-img-item"><img class="slider-img" src="pict/slider-1.jpg"></li>
                 </ul>
-                <div class="slider-contacts-wrapper">
-                    <p class="slider-contacts-title"></p>
+                <section class="slider-contacts-wrapper">
+                    <ul class="slider-controls">
+                        <li class="slider-controls-item slider-controls-item-current"></li>
+                        <li class="slider-controls-item"></li>
+                    </ul>
+                    <h2>We'll Give Your Business Fresh Ideas</h2>
+                    <h3>Contact Us by</h3>
                     <ul class="slider-contacts">
                         <li class="slider-contacts-item"><a class="slider-contacts-item-link" href="#"></a></li>
                         <li class="slider-contacts-item"><a class="slider-contacts-item-link" href="#"></a></li>
                         <li class="slider-contacts-item"><a class="slider-contacts-item-link" href="#"></a></li>
                     </ul>
-                </div>
-            </div><!-- slider -->
+                </section>
+            </section><!-- slider -->
             <!-- about -->
-            <section class="index-about">
-                <h2>Welcome to Our Agency</h2>
+            <section class="section">
+                <h2><span>Welcome to Our Agency</span></h2>
                 <h3><a href="#">Nullam Concester Tur Nerto</a></h3>
                 <p>
                     Gamus at magna non nunc tristique rhoncuseri tym. Aliquam nibh ante, egestas id dictum aterert commodo re luctus libero.
